# TimeKeeper

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  developer_notes.md  main.py  pyproject.toml
.github/: CODE_STANDARDS.md  周期提醒APP - 完整业务流程设计.md
alembic/: env.py
app/: __init__.py
docs/: BUSINESS_FLOW_VALIDATION_REPORT.md  COMPLETE_MIGRATION_REPORT.md  DATABASE_MODELS_COMPLETION_REPORT.md  DEVELOPMENT_ROADMAP.md  LOGGING.md  LOGGING_QUICKREF.md  LOGGING_REFACTOR.md  PROJECT_STATUS.md  PUSH_TASK_TEST_REPORT.md  QUICKSTART.md  REFACTORING_CHECKLIST.md  REFACTORING_REPORT.md  SESSION_MANAGEMENT_COMPLETE.md  database_setup.md  development_progress.md  redis_config_report.md  redis_guide.md  task_1.1_report.md  task_1.2_report.md  task_1.3_report.md  weekly_plan.md  周期提醒APP - AI开发实施指南.md
scripts/: add_await_to_repos.py  check_model_relationships.py  check_sms_logs.py  convert_models_to_mapped.py  convert_repos_to_async.py  create_sms_table.py  ensure_test_user.py  fix_alembic_version.py  fix_api_response.py  fix_remaining_routes.py  fix_return_statements.py  fix_templates_returns.py  init_database.py  init_system_templates.py  init_templates.py  init_templates_simple.py  init_test_data_pg.py  migrate_api_response.py  quick_test_login.py  replace_logging_with_structlog.py  setup_dev_db.py  test_login_logic.py  test_real_sms.py  test_redis_connection.py  test_send_sms.py  test_session_demo.py  test_session_management.py  test_session_quick.py  test_sms_flexible.py  test_sms_login.py  test_sms_protection.py  update_routes_to_async.py  validate_migration.py  (+1 more)
(+111 files in other folders)
