[project]
name = "timekeeper-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "alibabacloud-credentials>=1.0.3",
    "alibabacloud-dypnsapi20170525>=2.0.0",
    "alibabacloud-dysmsapi20170525>=4.2.0",
    "alibabacloud-tea-openapi>=0.4.1",
    "apscheduler>=3.11.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.44",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
